// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gaWHeZ"
  id={null}
  rows={null}
>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 cefDHQ"
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
  >
    Label
  </label>
  <a
    className="Typography__LinkText-sc-19auepv-1 bAJIRY"
    disabled={false}
    fontSize="1rem"
    fontWeight={500}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    Link
  </a>
  <p
    className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
    fontSize="1rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.5px"
  >
    Text
  </p>
  <h6
    className="Typography__TitleText-sc-19auepv-2 hytcMk"
    fontSize="1.2rem"
    fontWeight="400"
    letterSpacing="1px"
  >
    Title
  </h6>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gVYiTU"
  id={null}
  rows={null}
>
  <h1
    className="Typography__TitleText-sc-19auepv-2 mlBTJ"
    fontSize="2.5rem"
    fontWeight="300"
    letterSpacing="-1.5px"
  >
    Title 4XL
  </h1>
  <h2
    className="Typography__TitleText-sc-19auepv-2 ddthQe"
    fontSize="2rem"
    fontWeight="400"
    letterSpacing="0px"
  >
    Title 3XL
  </h2>
  <h3
    className="Typography__TitleText-sc-19auepv-2 fzdDpX"
    fontSize="1.5rem"
    fontWeight="400"
    letterSpacing="0.25px"
  >
    Title 2XL
  </h3>
  <h4
    className="Typography__TitleText-sc-19auepv-2 ibOjqh"
    fontSize="1.35rem"
    fontWeight="400"
    letterSpacing="0px"
  >
    Title XL
  </h4>
  <h5
    className="Typography__TitleText-sc-19auepv-2 hsjMgw"
    fontSize="1.15rem"
    fontWeight="500"
    letterSpacing="0.4px"
  >
    Title LG
  </h5>
  <h6
    className="Typography__TitleText-sc-19auepv-2 hytcMk"
    fontSize="1.2rem"
    fontWeight="400"
    letterSpacing="1px"
  >
    Title
  </h6>
  <p
    className="Typography__Paragraph-sc-19auepv-3 fmmcqH"
    fontSize="1.1rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.8px"
  >
    Text LG
  </p>
  <p
    className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
    fontSize="1rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.5px"
  >
    Text Regular
  </p>
  <p
    className="Typography__Paragraph-sc-19auepv-3 GBuDq"
    fontSize="0.875rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.25px"
  >
    Text SM
  </p>
  <p
    className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
    fontSize="0.75rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.4px"
  >
    Text XS
  </p>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 efZpLl"
    cursor="pointer"
    fontSize="0.75em"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="0.4px"
  >
    Label XS
  </label>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 eOMvxO"
    cursor="pointer"
    fontSize="0.8rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="1px"
  >
    Label SM
  </label>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 cefDHQ"
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
  >
    Label Regular
  </label>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 egoClY"
    cursor="pointer"
    fontSize="1rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
  >
    Label LG
  </label>
  <a
    className="Typography__LinkText-sc-19auepv-1 bAJIRY"
    disabled={false}
    fontSize="1rem"
    fontWeight={500}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    Normal Link
  </a>
  <a
    className="Typography__LinkText-sc-19auepv-1 HZgIk"
    disabled={false}
    fontSize="1rem"
    fontWeight={500}
    href={null}
    letterSpacing="0.2px"
    onClick={null}
    target={null}
  >
    Large Link
  </a>
  <a
    className="Typography__LinkText-sc-19auepv-1 jahNJB"
    disabled={false}
    fontSize="1.25rem"
    fontWeight={500}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    XLarge Link
  </a>
  <a
    className="Typography__LinkText-sc-19auepv-1 fXcUcz"
    disabled={false}
    fontSize="1.45rem"
    fontWeight={500}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    XXLarge Link
  </a>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 dYyaCO"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 gKPNdq"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 BoDXq"
      fontSize="1rem"
      fontWeight={300}
      id={null}
      letterSpacing="0.5px"
    >
      Light Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      Regular Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Medium Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 ikAKub"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Bold Text
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 gKPNdq"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 crETFn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={300}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Light Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cefDHQ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Regular Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kZpRnB"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={500}
      htmlFor={null}
      letterSpacing=".5px"
    >
      MediumLabel
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 llZdFW"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={600}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Bold Label
    </label>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 gKPNdq"
    id={null}
    rows={null}
  >
    <a
      className="Typography__LinkText-sc-19auepv-1 jeBwfK"
      disabled={false}
      fontSize="1rem"
      fontWeight={300}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Light Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 bAJIRY"
      disabled={false}
      fontSize="1rem"
      fontWeight={500}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Regular Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 bAJIRY"
      disabled={false}
      fontSize="1rem"
      fontWeight={500}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Medium Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 kyCQZr"
      disabled={false}
      fontSize="1rem"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Bold Link
    </a>
  </section>
</section>
`;
